# delegation-lab

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 0001-architecture-and-quality-gate.md
scripts/: generate_figures.py
src/delegation_lab/: cli.py  simulation.py
src/delegation_lab/api/: config.py  main.py  router.py  schemas.py
src/delegation_lab/api/routes/: allocation.py  capacity.py  dag.py  health.py  return_operator.py
src/delegation_lab/domain/: allocation.py  capacity.py  dag.py  return_operator.py
tests/api/: conftest.py  test_endpoints.py
tests/cli/: test_cli.py
tests/domain/: test_allocation.py  test_capacity.py  test_dag.py  test_return_operator.py
tests/sim/: test_simulation.py
