[project]
name = "delegation-lab"
version = "0.1.0"
description = "Reference implementation of the Minimum Sufficient Oversight (MSO) framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []  # domain core is pure-Python / stdlib only

[project.optional-dependencies]
api = ["fastapi>=0.115", "uvicorn[standard]>=0.30", "pydantic-settings>=2.4"]
cli = ["typer>=0.12"]
viz = ["matplotlib>=3.7"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6", "mypy>=1.11", "httpx>=0.27", "typer>=0.12", "pre-commit>=3.8"]

[project.scripts]
delegation-lab = "delegation_lab.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/delegation_lab"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ANN"]
# B008: FastAPI Depends() default is idiomatic.
# ANN: type annotations are required on all functions (incl. return type).
ignore = [
    "B008",   # FastAPI Depends() default is idiomatic
    "UP042",  # keep (str, Enum): StrEnum is 3.11+ only, we support 3.10
]

[tool.ruff.lint.per-file-ignores]
# tests may omit return annotations on test functions
"tests/**" = ["ANN201", "ANN001"]
"scripts/**" = ["ANN201", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["delegation_lab"]

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.10"
files = ["src", "tests"]
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
